# study_rpg

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  设计.md
docs/: PROGRAM_DESIGN.md
src/: companion.rs  desktop.rs  desktop_ui.rs  lib.rs  main.rs  player.rs  quest.rs  session.rs  skill.rs  statistics.rs  storage.rs  study_rpg.rs  xp.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-ui/: App.svelte  DailyQuestStatus.svelte  main.ts  styles.css  types.ts
tests/: companion_layout.rs  daily_quests.rs  desktop_controller.rs  statistics_report.rs
